Opened 14 years ago

Closed 14 years ago

#1862 closed defect (fixed)

Wrong bit rate in MPEG2 video file

Reported by: Heesuk Jung Owned by:
Priority: normal Component: avcodec
Version: git-master Keywords: mpeg2video
Cc: dwkang@google.com, myungchul.kim@lge.com, suhwang.kim@lge.com, woojun.jung@lge.com, donggul.kim@lge.com, hojae.lee@lge.com, kubong.min@lge.com, wonsik@google.com Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

Summary of the bug:
In some MPEG2 video file case, mpegvideo parser get wrong stream bit rate.

How to reproduce:
% ffprobe C069_MOV_MPEG2[Main@Main@787Kbps@QCIF@23.976fps]_MP3[128Kbps@44.1kHz@2ch].mov

Attachments (1)

0001-Wrong-bit-rate-in-MPEG2-video-file-Ticket-1862.patch (1.3 KB ) - added by Heesuk Jung 14 years ago.
Resolving Patch

Download all attachments as: .zip

Change History (7)

comment:1 by Carl Eugen Hoyos, 14 years ago

Keywords: Wrong bit rate removed
Version: unspecifiedgit-master

To make this a valid ticket, please add the complete, uncut console output of

$ ffmpeg -i C069_MOV_MPEG2\[Main\@Main\@787Kbps\@QCIF\@23.976fps\]_MP3\[128Kbps\@44.1kHz\@2ch\].mov

comment:2 by Carl Eugen Hoyos, 14 years ago

Keywords: mpeg2video added

comment:3 by Heesuk Jung, 14 years ago

FFmpeg get 104857kbps for C069_xxx.mov.
But bit rate of MPEG2 Video is up to 80 Mbps in case 1920x1080 resoution.

hsjung@ubuntu:~/work/ffmpeg-master$ ./ffmpeg -i ~/Downloads/C069_MOV_MPEG2\[Main@Main@787Kbps@QCIF@23.976fps\]_MP3\[128Kbps@44.1kHz@2ch\].mov 
ffmpeg version N-35594-g7d1e003 Copyright (c) 2000-2012 the FFmpeg developers
  built on Oct 29 2012 05:20:14 with gcc 4.6 (Ubuntu/Linaro 4.6.3-1ubuntu5)
  configuration: --enable-gpl --enable-libfaac --enable-libfdk-aac --enable-libmp3lame --enable-libopencore-amrnb --enable-libopencore-amrwb --enable-librtmp --enable-libtheora --enable-libvorbis --enable-libvpx --enable-x11grab --enable-libx264 --enable-nonfree --enable-version3
  libavutil      52.  1.100 / 52.  1.100
  libavcodec     54. 69.100 / 54. 69.100
  libavformat    54. 35.100 / 54. 35.100
  libavdevice    54.  3.100 / 54.  3.100
  libavfilter     3. 20.106 /  3. 20.106
  libswscale      2.  1.101 /  2.  1.101
  libswresample   0. 16.100 /  0. 16.100
  libpostproc    52.  1.100 / 52.  1.100
[mpegts @ 0x250f260] max_analyze_duration 5000000 reached at 5004000
Input #0, mpegts, from '/home/hsjung/Downloads/C069_MOV_MPEG2[Main@Main@787Kbps@QCIF@23.976fps]_MP3[128Kbps@44.1kHz@2ch].mov':
  Duration: 00:00:28.70, start: 1.400000, bitrate: 964 kb/s
  Program 1 
    Metadata:
      service_name    : Service01
      service_provider: FFmpeg
    Stream #0:0[0x100]: Video: mpeg2video (Main) ([2][0][0][0] / 0x0002), yuv420p, 176x144 [SAR 1:1 DAR 11:9], 104857 kb/s, 23.98 fps, 23.98 tbr, 90k tbn, 47.95 tbc
    Stream #0:1[0x101]: Audio: mp3 ([3][0][0][0] / 0x0003), 44100 Hz, stereo, s16, 128 kb/s
At least one output file must be specified
hsjung@ubuntu:~/work/ffmpeg-master$
Last edited 14 years ago by Heesuk Jung (previous) (diff)

comment:4 by Carl Eugen Hoyos, 14 years ago

Reproduced by developer: set
Status: newopen

by Heesuk Jung, 14 years ago

Resolving Patch

comment:5 by Heesuk Jung, 14 years ago

I attached resolving patch for current issue.
There are some log after appplying patch.

hsjung@ubuntu:~/work/ffmpeg-master$ ./ffprobe ~/Downloads/C069_MOV_MPEG2\[Main@Main@787Kbps@QCIF@23.976fps\]_MP3\[128Kbps@44.1kHz@2ch\].mov 
ffprobe version N-35597-g67420b3 Copyright (c) 2007-2012 the FFmpeg developers
  built on Oct 29 2012 05:52:39 with gcc 4.6 (Ubuntu/Linaro 4.6.3-1ubuntu5)
  configuration: --enable-gpl --enable-libfaac --enable-libfdk-aac --enable-libmp3lame --enable-libopencore-amrnb --enable-libopencore-amrwb --enable-librtmp --enable-libtheora --enable-libvorbis --enable-libvpx --enable-x11grab --enable-libx264 --enable-nonfree --enable-version3
  libavutil      52.  1.100 / 52.  1.100
  libavcodec     54. 69.100 / 54. 69.100
  libavformat    54. 35.100 / 54. 35.100
  libavdevice    54.  3.100 / 54.  3.100
  libavfilter     3. 20.106 /  3. 20.106
  libswscale      2.  1.101 /  2.  1.101
  libswresample   0. 16.100 /  0. 16.100
  libpostproc    52.  1.100 / 52.  1.100
[mpegts @ 0x30b0c20] max_analyze_duration 5000000 reached at 5004000
Input #0, mpegts, from '/home/hsjung/Downloads/C069_MOV_MPEG2[Main@Main@787Kbps@QCIF@23.976fps]_MP3[128Kbps@44.1kHz@2ch].mov':
  Duration: 00:00:28.70, start: 1.400000, bitrate: 964 kb/s
  Program 1 
    Metadata:
      service_name    : Service01
      service_provider: FFmpeg
    Stream #0:0[0x100]: Video: mpeg2video (Main) ([2][0][0][0] / 0x0002), yuv420p, 176x144 [SAR 1:1 DAR 11:9], 23.98 fps, 23.98 tbr, 90k tbn, 47.95 tbc
    Stream #0:1[0x101]: Audio: mp3 ([3][0][0][0] / 0x0003), 44100 Hz, stereo, s16, 128 kb/s
hsjung@ubuntu:~/work/ffmpeg-master$

comment:6 by Carl Eugen Hoyos, 14 years ago

Resolution: fixed
Status: openclosed
Note: See TracTickets for help on using tickets.